# RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
eval/: retrieval_eval.py
faiss_index/: index.faiss  index.pkl
src/config/: config.py
src/document_ingestion/: document_processor.py  table_extractor.py
src/graph_builder/: graph_builder.py
src/logging/: rag_logger.py
src/node/: reactnode.py
src/state/: rag_state.py
src/vectorstore/: vectorstore.py
